<resources>
    <string name="app_name">7Funs</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">665096563622904</string>

    <string name="drawer_header_title">料理美食王</string>

    <string name="navigation_item_recipes_section">食譜</string>
    <string name="navigation_item_personal_section">我的收藏</string>
    <string name="navigation_item_instructor_section">料理老師</string>
    <string name="navigation_item_qa_section">美食問與答</string>
    <string name="navigation_item_sponsor_section">吃飯好朋友</string>

    <string name="menu_item_order">呈現順序調整</string>
    <string name="menu_item_order_latest">最新</string>
    <string name="menu_item_order_most_popular">熱門</string>

    <string name="recipes_card_item_collect">收藏</string>
    <string name="recipes_card_item_detail">內容</string>

    <string name="recipe_detail_method">做法</string>

</resources>
